display mongo status in html

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,11 +10,11 @@
     <div>
         <p>Click Here for result</p>
             <button (click)="result()">result Link</button><br>              
-                <label>Name : {{ name }}</label><br>
-                <label>reg num: {{regNum }}</label><br>
+                <label>Name : {{ todos.Name }}</label><br>
+                <label>reg num: {{todos.RegisterNumber }}</label><br>
                 <label>prev gpa : {{prevGpa}}/10</label><br>
                 <label>email : {{email}}</label><br>
-                <label>department : {{department}}</label><br>
+                <label>department : {{ todos.Department }}</label><br>
                 <label>year : {{year}}</label><br>
                 <label>attandance : {{attandance}}/100</label>
     </div>                                                                     
