added all data for landing form mongo

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -11,11 +11,11 @@
         <p>Click Here for result</p>
             <button (click)="result()">result Link</button><br>              
                 <label>Name : {{ todos.Name }}</label><br>
-                <label>reg num: {{todos.RegisterNumber }}</label><br>
-                <label>prev gpa : {{prevGpa}}/10</label><br>
-                <label>email : {{email}}</label><br>
+                <label>reg num: {{ todos.RegisterNumber }}</label><br>
+                <label>prev gpa : {{ todos.PrevGpa}}/10</label><br>
+                <label>email : {{todos.Email}}</label><br>
                 <label>department : {{ todos.Department }}</label><br>
-                <label>year : {{year}}</label><br>
-                <label>attandance : {{attandance}}/100</label>
+                <label>year : {{todos.Year}}</label><br>
+                <label>attandance : {{todos.Attendance}}/100</label>
     </div>                                                                     
 </div>
